--- a/Style.css
+++ b/Style.css
@@ -8,7 +8,7 @@
     font-family: "Macondo", cursive;
 }
 :roor{
-    --background-color:white;  
+    --background-color:rgb(32, 0, 0);  
     --text-color:black;
 }
 .dark-Mode{
@@ -60,6 +60,7 @@ button{
 .options{
     display: none;
     position: absolute;
+    right: 10px;
     text-decoration: none;
     box-shadow:0 0 3px  #a59c8d;
     background-color: rgb(252, 254, 255);
@@ -68,7 +69,7 @@ button{
 }
 .option {
     position: relative;
-    left: -15px;
+    
     cursor: pointer;
     width: 250px;
     display: block;
@@ -115,18 +116,20 @@ button{
 
 }
 .country{
-    
-    border: 2px solid rgba(0, 0, 0, 0.1); 
-     box-shadow:0 0 2px 2px rgba(137, 131, 131, 0.2);
     margin: 30px;
     border-radius: 4px;
     max-height: fit-content;
     width: 1fr;
-
     display: flex;
     flex-direction: column;
-    
+    box-shadow:0 0 30px #b6b6c399;
+    cursor: pointer;
+    transition: ease-in-out 0.3s;
+    &:hover{
+        scale: 1.2;
+    }
 }
+
 
    .country img{
     width:100%;
