--- a/Style.css
+++ b/Style.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     font-family: "Macondo", cursive;
+    /* background: linear-gradient(to right, #e7caca 10%, #dddabf 90%);          */
 }
 :roor{
     --background-color:rgb(32, 0, 0);  
@@ -28,6 +29,9 @@ body{
     justify-content: space-between;
 }
 button{
+    position: fixed;
+    top: 10px;
+    right: 1px;
     padding: 10px 15px;
     font-size: 20px;
     cursor: pointer;
@@ -48,6 +52,8 @@ button{
     box-shadow:0 0 3px  #a59c8d;
     /* font-size: 20px; */
     cursor: pointer;
+    background-color: var(--background-color);
+    color: var(--text-color);
 }
 .selectBtn{
     display: flex;
@@ -55,6 +61,7 @@ button{
 }
 .selectMenu.active .options{
     display: block;
+
 }
 
 .options{
@@ -63,13 +70,15 @@ button{
     right: 10px;
     text-decoration: none;
     box-shadow:0 0 3px  #a59c8d;
-    background-color: rgb(252, 254, 255);
+    /* background-color: rgb(252, 254, 255); */
     margin: 10px;
     padding: 10px;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    z-index: 9;
 }
 .option {
     position: relative;
-    
     cursor: pointer;
     width: 250px;
     display: block;
@@ -77,7 +86,7 @@ button{
     font-size: 15px;
 }
 .options .option:hover{
-    background-color: rgb(229, 231, 233);
+    background-color: rgb(221, 209, 209);
 }
 
 .find{
@@ -104,12 +113,13 @@ button{
     border: none;
     outline: none; 
      font-family: "Macondo", cursive;
-
+     background-color: var(--background-color);
+     color: var(--text-color);
 }
 
 #cointener{
     width: 95%;
-    height: fit-content;
+    height: fit-content ;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     margin: 0 auto;
@@ -118,7 +128,7 @@ button{
 .country{
     margin: 30px;
     border-radius: 4px;
-    max-height: fit-content;
+    max-height: 400px;
     width: 1fr;
     display: flex;
     flex-direction: column;
